--- a/views/view-bets.ejs
+++ b/views/view-bets.ejs
@@ -18,20 +18,14 @@
                         <span class="col-12 header-text white-text">Matches </span>
                     </p>
                     <div class="row border-bottom text-center py-2 my-0">
-                        <% history.games.forEach((game)=>{ %>
+                        <% history.games.forEach(game => { %>
 
                             <div class="px-1 d-flex justify-content-between">
                                 <span class="text-secondary badge"><%=game.matchTime %></span>
                                 <span class=""><strong><%=game.home %></strong></span>
                                 <span class="text-warning badge">VS</span>
                                 <span class=""><strong><%= game.away %></strong></span>
-                                <span class="text-info badge"><%= game.betOptions %> - <%= game.odds %>
-                                    <% if(game.matchResult) { %>
-                                        <span class="text-success"><i class="bi bi-check-circle"></i></span>
-                                    <% } else { %>
-                                        <span class="text-danger"><i class="bi bi-x-circle"></i></span>
-                                    <% } %>
-                                </span>
+                                <span class="text-info badge"><%= game.betOptions %> - <%= game.odds %></span>
                             </div>
                             <% }) %>
                     </div>
@@ -42,7 +36,7 @@
                     </p>
                     <p class="row border-bottom my-0">
                         <span class="col-7">Total Odds:</span>
-                        <span class="col-5 border-left-sm text-info badge"><%= totalOdds[i] %></span>
+                        <span class="col-5 border-left-sm text-info badge"><%= sumOdd %></span>
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Stake Limit:</span>
@@ -54,7 +48,7 @@
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Status: </span>
-                        <span class="col-5 border-left-sm text-warning badge"><%=history.slipStatus %>></span>
+                        <span class="col-5 border-left-sm text-warning badge"><%=history.slipStatus %></span>
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Ticket Bonus: </span>
