--- a/views/view-ticket.ejs
+++ b/views/view-ticket.ejs
@@ -1,13 +1,13 @@
-<% tickets.forEach((ticket, i) => { %>
+<% BetSlip.forEach(game => { %>
 
     <div class="card card-bg my-2">
         <div class="card-body py-0">
             <div class="row border-bottom">
                 <div class="col-md-2"></div>
                 <div class="col-md-8 text-center header-text">
-                    <span> Bet Slip: <%= ticket._id %></span><br>
+                    <span> Bet Slip: <%=game._id %></span><br>
                     <span class="badge">
-                        <span class="">Posted: </span><span class="col-md-4 text-secondary"><% new Date(ticket.dateIssued).getHours() %> </span>
+                        <span class="">Posted: </span><span class="col-md-4 text-secondary"><%= game.createdAt.getHours() %>:<%=game.createdAt.getMinutes() %> </span>
                     </span>
                 </div>
                 <div class="col-md-2"></div>
@@ -18,15 +18,15 @@
                         <span class="col-12 header-text white-text">Matches </span>
                     </p>
                     <div class="row border-bottom text-center py-2 my-0">
-                        <% ticket.games.forEach((game)=>{ %>
+                        <% game.games.forEach(match => { %>
 
                             <div class="px-1 d-flex justify-content-between">
-                                <span class="text-secondary badge"><%=game.matchTime %></span>
-                                <span class=""><strong><%=game.home %></strong></span>
+                                <span class="text-secondary badge"><%=match.matchTime %></span>
+                                <span class=""><strong><%=match.home %></strong></span>
                                 <span class="text-warning badge">VS</span>
-                                <span class=""><strong><%= game.away %></strong></span>
-                                <span class="text-info badge"><%= game.betOptions %> - <%= game.odds %>
-                                    <% if(game.matchResult) { %>
+                                <span class=""><strong><%= match.away %></strong></span>
+                                <span class="text-info badge"><%= match.betOptions %> - <%= match.odds %>
+                                    <% if(match.matchResult) { %>
                                         <span class="text-success"><i class="bi bi-check-circle"></i></span>
                                     <% } else { %>
                                         <span class="text-danger"><i class="bi bi-x-circle"></i></span>
@@ -41,19 +41,19 @@
                     </p>
                     <p class="row border-bottom my-0">
                         <span class="col-7">Total Odds:</span>
-                        <span class="col-5 border-left-sm text-info badge"><%=totalOdds[i] %></span>
+                        <span class="col-5 border-left-sm text-info badge"><%= game.totalOdds %></span>
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Stake Limit:</span>
-                        <span class="col-5 border-left-sm text-primary badge"><%=ticket.userStakeLimit %></span>
+                        <span class="col-5 border-left-sm text-primary badge"><%=game.userStakeLimit %></span>
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Ticket Limit:</span>
-                        <span class="col-5 border-left-sm text-primary badge"><%=ticket.maximumStake %></span>
+                        <span class="col-5 border-left-sm text-primary badge"><%=game.maximumStake %></span>
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Status: </span>
-                        <span class="col-5 border-left-sm text-warning badge"><%ticket.slipStatus %></span>
+                        <span class="col-5 border-left-sm text-warning badge"><%= game.slipStatus %></span>
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Ticket Bonus: </span>
@@ -61,13 +61,12 @@
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Result: </span>
-                        <%if(ticket.result){%>
+                        <%if(game.result == 'true'){%>
                             <span class="col-5 border-left-sm text-secondary badge">
                                 <i class="bi bi-check-circle"></i>
                             </span>
                             
-                          <% } %>
-                          <%if(!ticket.result){%>
+                          <% } else { %>
                             <span class="col-5 border-left-sm text-danger badge">
                                 <i class="bi bi-x-check-circle"></i>
                             </span>
