fix: response messages

--- a/views/view-bets.ejs
+++ b/views/view-bets.ejs
@@ -52,7 +52,7 @@
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Ticket Bonus: </span>
-                        <span class="col-5 border-left-sm text-success badge">5%</span>
+                        <span class="col-5 border-left-sm text-success badge"><%-history.gameSlip.ticketBonus %></span>
                     </p>
                     <p class="row border-bottom my-0 d-flex justify-content-between">
                         <span class="col-7">Result: </span>
