[feature]: Calculating match bonus
-Added total cashout field on betslip

Updated template engine for cashout

refactored bet module to accomodate the cashOut field

--- a/views/view-bets.ejs
+++ b/views/view-bets.ejs
@@ -70,6 +70,10 @@
                             </span>
                           <% } %>
                     </p>
+                    <p class="row border-bottom my-0 d-flex justify-content-between">
+                        <span class="col-7">Cashout: </span>
+                        <span class="col-5 border-left-sm text-success badge"><%=history.cashOut %></span>
+                    </p>
                     <div class="row d-flex justify-content-between">
                         <a class="col-lg-5 col-md-5 col-sm-5 btn btn-danger my-2">Cancel</a>
                         <a class="col-lg-5 col-md-5 col-sm-5 btn btn-primary my-2">Edit</a>
